--- a/index.html
+++ b/index.html
@@ -52,10 +52,16 @@
       <div class="container">
         <h1>WE ARE <span>RYZN</span></h1>
         <p>
-          RYZN Singapore is a place where you can train with personalized training modules which are specially developed to suit your individual
-          fitness levels. We believe in empowering you to be able to face your individual goals such as fat
-          loss, functional fitness and getting stronger. RYZN provides a fun environment where you can train alongside your friends, family and community. We are different from any other gyms because we have different types of training which
-          comprises of functional fitness classes which you will learn mobility and endurance on top of losing weight, and a weights area where you can strengthen and condition your muscles.
+          RYZN Singapore is a place where you can train with personalized
+          training modules which are specially developed to suit your individual
+          fitness levels. We believe in empowering you to be able to face your
+          individual goals such as fat loss, functional fitness and getting
+          stronger. RYZN provides a fun environment where you can train
+          alongside your friends, family and community. We are different from
+          any other gyms because we have different types of training which
+          comprises of functional fitness classes which you will learn mobility
+          and endurance on top of losing weight, and a weights area where you
+          can strengthen and condition your muscles.
         </p>
       </div>
     </section>
@@ -117,7 +123,8 @@
     <section class="filler blockquote">
       <div class="container">
         <p class="mb-0">
-          "YOU’RE THE ONLY ONE WHO CAN MAKE THE DIFFERENCE. WHATEVER YOUR DREAM IS, GO FOR IT."
+          "YOU’RE THE ONLY ONE WHO CAN MAKE THE DIFFERENCE. WHATEVER YOUR DREAM
+          IS, GO FOR IT."
         </p>
         <footer class="blockquote-footer">MAGIC JOHNSON.</footer>
       </div>
@@ -256,8 +263,10 @@
             <a href="#">RYZN</a>
           </div>
           <div class="address">
-            <span class="add-span">75 Aliwal St</span><span> / </span><span class="span-post">Singapore 199946</span><br>
-            <a href="tel:88888888" class="span-contact">88888888</a><span> / </span><span class="span-mail">info@RYZN.com</span>
+            <span class="add-span">75 Aliwal St</span><span> / </span
+            ><span class="span-post">Singapore 199946</span><br />
+            <a href="tel:88888888" class="span-contact">88888888</a
+            ><span> / </span><span class="span-mail">info@RYZN.com</span>
             <div class="directions">
               <a href="" class="direction-link">Get Directions</a>
             </div>
@@ -275,6 +284,7 @@
             </ul>
           </div>
           <div class="copy-right">&copy; 2020 RYZN</div>
+        </div>
       </div>
     </section>
 
